Back-end update and Front-end implementation
